Suppress Retrofit illegal reflective access warning
Description & Context
=====================
https://stackoverflow.com/a/68665089/3717025

Related Links
-------------

Testing Done
------------