@@ -155,3 +155,15 @@ dependencies {
 }
 
 apply from: "${gradleScriptsDir}/jacoco-android-app.gradle"
+
+afterEvaluate {
+    tasks.withType(Test) {
+        /**
+         * fix for retrofit https://github.com/square/retrofit/issues/3341
+         */
+        jvmArgs = [
+            "--add-opens",
+            "java.base/java.lang.invoke=ALL-UNNAMED"
+        ]
+    }
+}
